changed scaffold model and run migration

--- a/test/fixtures/casts.yml
+++ b/test/fixtures/casts.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  about: MyString
-  image: 
+  description: MyText
+  picture: MyString
 
 two:
   name: MyString
-  about: MyString
-  image: 
+  description: MyText
+  picture: MyString
